z-index fixed for design-by & whatsapp number & message updated for chat icon

--- a/public/frontEnd/css/style.css
+++ b/public/frontEnd/css/style.css
@@ -1184,6 +1184,9 @@ a {
 .design-by {
     gap: 10px;
 }
+.design-by a {
+    z-index: 9999999; /* Ensures visibility above other content */
+}
 .design-by a img {
     height: 25px;
 }
